	PR gas/14887 	* config/tc-arm.c (skip_past_char): Skip whitespace before the 	anticipated character. 	* config/tc-arm.c (parse_address_main): Delete skip of whitespace 	here as it is no longer needed.

PR gas/14887
	* gas/arm/neon-ldst-es.s: Add more whitespace.